feat(export): aperçu avant téléchargement + choix des colonnes (listes)
Pour chaque export Excel de liste (factures, patients, RDV, dispensations), le
bouton mène désormais à une page d'aperçu : cases à cocher par colonne + tableau
d'échantillon (12 lignes) reflétant la sélection, puis « Télécharger l'Excel ».

- FicheExportService refondu en modèle « colonnes » (Col<T> clé+libellé+extracteur),
  moteur générique preview()/xlsx() filtrant les colonnes retenues ; dispensations
  aplaties en lignes par article
- ExportPreviewDto + template partagé export/preview.html (form GET, formaction
  vers preview/download, contexte de filtres en champs cachés)
- Endpoints /…/export/preview ajoutés (gating identique aux listes) ; /…/export
  accepte ?cols= ; boutons de liste pointent vers l'aperçu
- i18n FR/EN/AR ; tests d'aperçu + export colonnes filtrées (FicheExportWebTest)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>